# android-jni-kcp-udp-demo

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/fotric/kcp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  TestKcppClient.cpp  TestKcppServer.cpp
app/src/main/cpp/kcpp-master/: kcpp.h
app/src/main/java/com/fotric/kcp/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/fotric/kcp/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
